Closed Bug 1647449 Opened 5 years ago Closed 5 years ago

Fix usage of GetFrameElementInternal in nsDocShell::DetermineContentType

Categories

(Core :: DOM: Navigation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
81 Branch
Fission Milestone M6b
Tracking Status
firefox81 --- fixed

People

(Reporter: kmag, Assigned: smacleod)

References

Details

Attachments

(1 file)

It's meant to differentiate between frameset and iframe loads in a content policy, but won't work for OOP frames.

Perhaps we should just remove the TYPE_INTERNAL_FRAME type altogether at this point?

Severity: -- → S3
Priority: -- → P3

This has already been made to work with Fission using the EmbedderElementType synced field: https://searchfox.org/mozilla-central/rev/82c04b9cad5b98bdf682bd477f2b1e3071b004ad/netwerk/base/LoadInfo.cpp#58-70 - We should be able to migrate this code to be the same.

Assignee: nobody → smacleod
Status: NEW → ASSIGNED
Fission Milestone: --- → M6b
Pushed by smacleod@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b9c8fa97dc5d fix nsDocShell::DetermineContentType to work for OOP frames. r=nika
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: