Bug 1647449 - fix nsDocShell::DetermineContentType to work for OOP frames. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D85194